<resources>
    <string name="app_name">Harkay: Puntos de Riesgo</string>
    <string name="item_Clima">Clima</string>
    <string name="item_Mapa">Mapa</string>
    <string name="item_Usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txtEmail">Correo Electrónico</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtConfPass">Confirmar Contraseña</string>
    <string name="hintEmail">example@gmail.com</string>
    <string name="hintPass">Introducir Contraseña</string>

    <string name="lblAcceder">¡Accede Ya!</string>
    <string name="lblRegistro">¡Regístrate!</string>
    <string name="btnAcceder">Acceder</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="olvidarPass">¿Olvidaste tu Contraseña?</string>
    <string name="txtRegistro">¿No tienes una cuenta? Regístrate</string>
    <string name="txtLogin">¿Ya tienes una cuenta? Accede Ya</string>

    <string name="title_crear_post">Crea un Punto de Riesgo</string>
    <string name="lbl_title">Título</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="lbl_detalle">Descripción</string>
    <string name="btn_up_image">Subir Imagen</string>
    <string name="btn_crear_post">Añadir</string>
    <string name="txt_file_success">Punto Añadido</string>
    <string name="msg_upload_image">Actualizando Foto</string>

</resources>