<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/terceary"
    tools:context=".CrearPostActivity">

    <TextView
        android:id="@+id/title_crear_post"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:background="@color/principal"
        android:gravity="center"
        android:text="@string/title_crear_post"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:hint="Titulo del Suceso"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_crear_post" />

    <Button
        android:id="@+id/btn_anadir"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordenegro"
        android:text="@string/btn_crear_post"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPRDescription" />

    <TextView
        android:id="@+id/lblCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lbl_categoria"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:background="@drawable/borde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCategoria" />

    <TextView
        android:id="@+id/lblDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/txtDescription"
        android:text="@string/lbl_detalle"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/lblTitlePR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/lbl_title"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_crear_post" />

    <EditText
        android:id="@+id/txtPRDescription"
        android:layout_width="307dp"
        android:layout_height="114dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Descripción del Suceso"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDetalle" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="156dp"
        android:layout_height="146dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bordetrans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_crear_post"
        app:srcCompat="@mipmap/ic_channel_background" />

    <Button
        android:id="@+id/btn_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/borde"
        android:text="@string/btn_up_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_crear_post" />

</androidx.constraintlayout.widget.ConstraintLayout>